# triton-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  justfile  pyproject.toml  run_server.py  start.ps1
docs/: api.md  architecture.md  fleet.md  model-management.md  setup.md  triton-inference-server.md
src/triton_mcp/: __init__.py  server.py
src/triton_mcp/tools/: __init__.py  config_tools.py  inference_tools.py  metrics_tools.py  model_tools.py
tests/: test_smoke.py
webapp/: index.html  package.json  playwright.config.ts  vite.config.ts
webapp/e2e/: triton.spec.ts
webapp/src/: App.tsx  index.css
webapp/src/components/: AppLayout.tsx
webapp/src/lib/: api.ts
webapp/src/pages/: ConfigPage.tsx  Dashboard.tsx  HelpPage.tsx  InferencePage.tsx  MetricsPage.tsx  ModelsPage.tsx  StatusPage.tsx
