[project]
name = "triton-mcp"
version = "0.1.0"
description = "NVIDIA Triton Inference Server control plane -- model repository manipulation, VRAM monitoring, and inference over gRPC via FastMCP 3.2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.2.0",
    "tritonclient[grpc]>=2.60",
    "httpx>=0.27",
    "pydantic>=2.0",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/triton_mcp"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "UP", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"src/**/*.py" = ["E501"]
"tests/**/*.py" = ["E501", "S101"]
"src/triton_mcp/server.py" = ["S603", "S110", "S607", "S104"]
